--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "tic_tac_toe",
-    "short_name": "tic_tac_toe",
+    "name": "game",
+    "short_name": "game",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
