--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "tic_tac_toe" "\0"
+            VALUE "FileDescription", "game" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "tic_tac_toe" "\0"
+            VALUE "InternalName", "game" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "tic_tac_toe.exe" "\0"
-            VALUE "ProductName", "tic_tac_toe" "\0"
+            VALUE "OriginalFilename", "game.exe" "\0"
+            VALUE "ProductName", "game" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
